--- a/css/lokasi-outlet.css
+++ b/css/lokasi-outlet.css
@@ -4796,7 +4796,7 @@ td {
     border-collapse: collapse;
     width: 100%;
     border: 1px solid #ffffff;
-    font-size: 12px;
+    font-size: 10px;
     font-family: Montserrat Alternates;
     font-weight: 500;
     text-align: center;
@@ -4839,6 +4839,7 @@ td {
     border-radius: 8px;
     left: 6%;
     width: 88%;
+    height: 131px;
   }
   .scrollable-container {
     top: 13%;
@@ -4850,7 +4851,7 @@ td {
   }
   .title-detail-alamat {
     position: absolute;
-    bottom: 134px;
+    bottom: 120px;
     font-size: 14px;
     left: 6%;
     font-weight: 800;
@@ -4858,10 +4859,10 @@ td {
   #detail-container {
     font-family: Montserrat Alternates;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 11px;
     width: 75%;
     position: absolute;
-    top: 61%;
+    top: 226px;
     bottom: 19%;
     left: 6%;
   }
@@ -5252,7 +5253,7 @@ td {
     border-collapse: collapse;
     width: 100%;
     border: 1px solid #ffffff;
-    font-size: 12px;
+    font-size: 9px;
     font-family: Montserrat Alternates;
     font-weight: 500;
     text-align: center;
@@ -5277,7 +5278,7 @@ td {
   /* Mengatur lebar kolom kedua menjadi 30% */
   th:nth-child(2),
   td:nth-child(2) {
-    width: 10%;
+    width: 0%;
   }
 
   /* Mengatur tinggi sel menjadi 50px */
@@ -5314,7 +5315,7 @@ td {
   #detail-container {
     font-family: Montserrat Alternates;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 11px;
     width: 75%;
     position: absolute;
     top: 61%;
@@ -5750,7 +5751,7 @@ td {
     position: absolute;
     border-radius: 8px;
     left: 3%;
-    width: 94%;
+    width: 95%;
     height: 108px;
   }
   .scrollable-container {
@@ -6379,7 +6380,7 @@ td {
     background-color: rgba(0, 0, 0, 0.06);
     padding: 1% 16px 1% 19px;
     border-radius: 5px;
-    margin-left: -3px;
+    margin-left: -11px;
     transform: scale(0.9);
   }
 
@@ -6608,7 +6609,7 @@ td {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 61%);
     top: 3%;
     right: 4%;
-    height: 236px;
+    height: 255px;
   }
   .table-outlet {
     height: 200px;
@@ -6660,8 +6661,8 @@ td {
     position: absolute;
     border-radius: 8px;
     left: 5%;
-    width: 91%;
-    height: 123px;
+    width: 93%;
+    height: 108px;
   }
   .scrollable-container {
     top: 13%;
@@ -6684,7 +6685,7 @@ td {
     font-size: 8px;
     width: 75%;
     position: absolute;
-    top: 61%;
+    top: 166px;
     bottom: 19%;
     left: 6%;
   }
@@ -6725,7 +6726,7 @@ td {
   .sosial-media {
     position: absolute;
     left: 130px;
-    top: -1px;
+    top: 62px;
     width: 70%;
     height: 73px;
     right: 0px;
@@ -6795,6 +6796,9 @@ td {
   }
 }
 @media (max-width: 430px) {
+  .sosial-media {
+    top: 0px;
+  }
   .burger,
   .close-burger {
     left: 90%;
@@ -6872,7 +6876,7 @@ td {
   }
   .title-detail-alamat {
     bottom: 95px;
-    left: -115px;
+    left: -101px;
     right: 0%;
     text-align: center;
     font-size: 14px;
@@ -6962,6 +6966,22 @@ td {
   }
 }
 @media (max-width: 390px) {
+  .outlet-navibar-menu {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    /* padding: 0 88px 0 0; */
+    z-index: 100;
+    position: fixed;
+    align-items: center;
+    flex-shrink: 0;
+  }
+  .sosial-media {
+    top: 0px;
+    left: 105px;
+  }
   .burger,
   .close-burger {
     left: 90%;
@@ -7039,7 +7059,7 @@ td {
   }
   .title-detail-alamat {
     bottom: 95px;
-    left: -98px;
+    left: -86px;
     right: 0%;
     text-align: center;
     font-size: 14px;
@@ -7129,6 +7149,18 @@ td {
   }
 }
 @media (max-width: 360px) {
+  .outlet-navibar-menu {
+    top: 0px;
+    left: 0px;
+    width: 104%;
+    height: 40px;
+    display: flex;
+    /* padding: 0 88px 0 0; */
+    z-index: 100;
+    position: fixed;
+    align-items: center;
+    flex-shrink: 0;
+  }
   .burger,
   .close-burger {
     left: 90%;
@@ -7152,7 +7184,7 @@ td {
     display: block;
     height: 40px;
     top: 10%;
-    width: 70%;
+    width: 71%;
     align-content: center;
     align-items: center;
     margin: auto;
@@ -7162,7 +7194,7 @@ td {
     z-index: 2;
     font-family: "Montserrat Alternates";
     color: rgb(255, 255, 255);
-    font-size: 32px;
+    font-size: 31px;
   }
   .sosial-text-container {
     font-size: 10px;
@@ -7206,7 +7238,7 @@ td {
   }
   .title-detail-alamat {
     bottom: 95px;
-    left: -88px;
+    left: -81px;
     right: 0%;
     text-align: center;
     font-size: 14px;
