--- a/css/lokasi-outlet.css
+++ b/css/lokasi-outlet.css
@@ -6981,7 +6981,7 @@ td {
   }
   .sosial-media {
     top: 0px;
-    left: 105px;
+    left: 89px;
   }
   .burger,
   .close-burger {
@@ -7313,6 +7313,186 @@ td {
     width: 141px;
     top: 60%;
     font-size: 10px;
+  }
+  .map-container {
+    top: 6%;
+    height: 885px;
+  }
+  .outlet-page {
+    height: 952px;
+  }
+  .sosial-text {
+    position: absolute;
+    left: 0%;
+    width: 140px;
+    font-size: 10px;
+  }
+}
+@media (max-width: 320px) {
+  .outlet-navibar-menu {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    /* padding: 0 88px 0 0; */
+    z-index: 100;
+    position: fixed;
+    align-items: center;
+    flex-shrink: 0;
+  }
+  .burger,
+  .close-burger {
+    left: 90%;
+  }
+  .outlet-navibar-menu {
+    left: 0px;
+  }
+
+  .sosial-container {
+    top: 147%;
+  }
+  .footer-logo {
+    top: 37%;
+    left: -4px;
+    width: 118px;
+    height: 33px;
+    position: absolute;
+  }
+  .judul {
+    position: absolute;
+    display: block;
+    height: 40px;
+    top: 10%;
+    width: 71%;
+    align-content: center;
+    align-items: center;
+    margin: auto;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
+    font-family: "Montserrat Alternates";
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+  }
+  .sosial-text-container {
+    font-size: 10px;
+    left: 0px;
+  }
+
+  .wa {
+    top: -38%;
+    left: 52%;
+  }
+  .fb {
+    top: 2%;
+    left: 52%;
+  }
+  .ig {
+    top: 42%;
+    left: 52%;
+  }
+
+  .wa,
+  .fb,
+  .ig {
+    position: absolute;
+    width: 111px;
+    height: 30px;
+  }
+  .title-table {
+    position: absolute;
+    top: 3%;
+    left: 0%;
+    right: 0%;
+    text-align: center;
+    width: 100%;
+  }
+  table {
+    font-size: 10px;
+    text-align: center;
+  }
+  .scrollable-container {
+    height: 145px;
+  }
+  .title-detail-alamat {
+    bottom: 95px;
+    left: -55px;
+    right: 0%;
+    text-align: center;
+    font-size: 14px;
+    width: 100%;
+    font-weight: 900;
+  }
+  #detail-container {
+    position: absolute;
+    top: 72%;
+    bottom: 17%;
+    left: 6%;
+    font-size: 10px;
+    width: 90%;
+  }
+  .table-container {
+    height: 295px;
+    top: 375px;
+    left: 5%;
+    right: 5%;
+    width: 90%;
+  }
+  #mapFrame {
+    width: 100%;
+    height: 235px;
+    border: 0;
+  }
+  .map-size {
+    position: absolute;
+    width: 96%;
+    height: 242px;
+    left: 2%;
+    right: 2%;
+    top: 5%;
+    border-width: 0.25px; /* Atur sesuai kebutuhan */
+    border: solid #0000003d;
+    border-radius: 10px;
+  }
+  .form-map {
+    top: 10%;
+    height: 275px;
+    width: 90%;
+    left: 5%;
+  }
+  .outlet-foot {
+    display: flex;
+    z-index: 4;
+    position: absolute;
+    bottom: 4%;
+    left: 3%;
+
+    width: 95%;
+    height: 164px;
+  }
+  .footer-wa,
+  .footer-fb,
+  .footer-ig {
+    width: 30px;
+    height: 30px;
+  }
+  .footer-wa {
+    left: -27%;
+  }
+  .footer-fb {
+    left: -27%;
+  }
+  .footer-ig {
+    left: -27%;
+  }
+  .outlet-alamt-footer {
+    font-size: 12px;
+    width: 128px;
+    top: 60%;
+    font-size: 9px;
+    left: 0px;
   }
   .map-container {
     top: 6%;
